--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -129,7 +129,7 @@ layout {
     }
 
     border {
-        width 8
+        width 6
         active-color "#{{ .colors.bright_orange }}"
         inactive-color "#{{ .colors.dark1 }}"
         urgent-color "#{{ .colors.bright_red }}"
@@ -145,9 +145,9 @@ layout {
         gap 0
         length total-proportion=0.975
         position "left"
-        active-color "#{{ .colors.bright_aqua }}"
+        active-color "#{{ .colors.neutral_blue }}"
         inactive-color "#{{ .colors.dark1 }}"
-        urgent-color "#{{ .colors.bright_aqua }}"
+        urgent-color "#{{ .colors.neutral_blue }}"
     }
 
     insert-hint {
