--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -186,6 +186,12 @@ clipboard {
 animations {
 }
 
+gestures {
+    hot-corners {
+        off
+    }
+}
+
 window-rule {
     match app-id=r#"firefox$"# title="^Picture-in-Picture$"
     open-floating true
