niri: spawn quickshell

--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -30,7 +30,7 @@ spawn-at-startup "wlsunset" "-t" "3499" "-T" "3500"
 spawn-at-startup "fcitx5" "-d" "--replace"
 spawn-at-startup "Telegram" "-startintray"
 spawn-at-startup "signal-desktop" "--start-in-tray"
-spawn-at-startup "waybar"
+spawn-at-startup "quickshell"
 
 binds {
     Mod+Return { spawn "kitty"; }
