--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -40,6 +40,7 @@ binds {
     Mod+O repeat=false { toggle-overview; }
 
     Mod+Shift+Semicolon allow-when-locked=true { spawn-sh "sleep 0.2 && killall -USR1 swayidle"; }
+    Mod+Z { spawn-sh "niri msg action focus-workspace 99 && wpctl set-mute '@DEFAULT_AUDIO_SINK@' 1"; }
 
 
     XF86AudioRaiseVolume allow-when-locked=true { spawn "wpctl" "set-volume" "@DEFAULT_AUDIO_SINK@" "0.1+" "-l" "1.5"; }
